--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </header>
 <body>
     <img id="minha_foto" src="fotoperfil.jpg" alt="foto de perfil">
+    <nav>
     <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
@@ -36,8 +37,11 @@
         <li>Node</li>
         <li>SQL</li>        
     </ul>
+    </nav>
     <article>
+        <section>
         <p>Entrei na Trybe tem quase 3 semanas, e o aprendizado tem sido fantástico, o curso requer bastante foco e compromisso, essa forma de ensino ativo aonde todo dia é colocado em prática o que é aprendido, é um diferencial enorme, os professores e responsáveis passam o conteudo de uma forma bem compreensível, tenho gostado muito dessa nova fase de aprendizado.</p>
+        </section>
     </article>
     <aside>
         <p>O aprendizado na trybe tem sido grande, desde a parte dar hard skills que é a parte de programação em si, como a parte de soft skills, é um diferencial enorme.</p>
