ajuste de indentação

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </section>
   </article> 
 
-  <table>
+  <table id="data_table">
       <thead>
         
         <th scope="row"> Blocos</th>
@@ -97,6 +97,6 @@
   <footer id="rodape">
     <h2>lessons learned - by Arthur Silva</h2>
   </footer>
-  
+
   </body>
 </html>
