--- a/index.html
+++ b/index.html
@@ -49,8 +49,21 @@
   <article>
     <section>
       <h2>Meu aprendizado na Trybe</h2>
-      <p>A Trybe apresenta um jeito único de fazer a gente aprender, aqui nós não nos desenvolvemos somente para serem programadores, mas sim, tudo que um verdadeiro profissional precisa possuir, como resiliência, respeito e preocupação pelo próximo. Vale afirmar também, que a ela nos fornece um material incrível, bem detalhado e com um nível além do básico. Além disso, conta com uma equipe de funcionários sensacional,que prestam apoio para todos independente do problema.</p>
+      <p>A Trybe apresenta um jeito único de fazer a gente aprender, aqui nós não nos desenvolvemos somente para serem
+        programadores, mas sim, tudo que um verdadeiro profissional precisa possuir, como resiliência, respeito e
+        preocupação pelo próximo. Vale afirmar também, que a ela nos fornece um material incrível, bem detalhado e com
+        um nível além do básico. Além disso, conta com uma equipe de funcionários sensacional,que prestam apoio para
+        todos independente do problema.</p>
     </section>
   </article>
+  <!--9. Crie uma seção que conta uma passagem sobre seu aprendizado-->
+  <section>
+    <aside>
+      <h2>Uma passagem na Trybe</h2>
+      <p> O meu primeiro projeto na Trybe, se chamou "lessons-leaned". Neste, fui responsável por montar um site do
+        zero, seguindo diversas regras que me desafiava a todo instante. Se você quiser enfrentar isso também, acesse o
+        site da Trybe e se inscrevendo. </p>
+    </aside>
+  </section>
 
 </body>
