--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html lange="pt-br">
     <head>
         <meta charset="UFT-8">
+        <link rel="stylesheet" href="style.css">
         <title>Document</title>
     </head>
     <body>
-        <header class="cabecalho">
-            <section class="titulo">
-                <h1>Título</h1>
-            </section>
+
+        <header id="cabecalho">
+                <h1 id="titulo">Título</h1>
         </header>
-        <img class="minha_foto" src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" width="200">
+        <img src="imagens/2e4c2e62-e377-44df-beda-2905a329f83b.jpeg" id="minha_foto">
+        <ul id="licoes_aprendidas">
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+            <li>Item 4</li>
+            <li>Item 5</li>
+            <li>Item 6</li>
+            <li>Item 7</li>
+            <li>Item 8</li>
+            <li>Item 9</li>
+            <li>Item 10</li>
+        </ul>
     </body>
 </html>
