--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
         <li>Node</li>
         <li>SQL</li>
     </ul>
+
+    <footer id="rodape">
+        <h3>Site desenvolvido por Breno Tainan</h3>
+    </footer>
 </body>
 </html>
