--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
     <header id="cabecalho"><h1 id="titulo">Lessons Learnd</h1></header>
-    <img id="minha_foto" src="rsz_imagem2.jpg" alt="garota de óculos com livros no fundo" width="300px">
+    <section>
+        <img id="minha_foto" src="rsz_imagem2.jpg" alt="garota de óculos com livros no fundo" width="300px">
+    </section>
+    <section>
+        <ol id="licoes_aprendidas">
+            <li>Front-end</li>
+            <li>Fundamentos</li>
+            <li>Back-end</li>
+            <li>Ciência da computação</li>
+            <li>DOM</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Soft Skills</li>
+            <li>Lógica</li>
+        </ol>
+    </section>
+    
+
         
 </body>
 </html>
