--- a/index.html
+++ b/index.html
@@ -10,13 +10,55 @@
 </head>
 
 <body>
-  <div id="cabecalio">
-    <h1 id="Titulo">Titulo</h1>
+  <header>
+    <div id="cabecalio">
+      <h1 id="Titulo">Lições Aprendidas</h1>
+    </div>
+    <div>
+      <img id="minha_foto" src="MatheusMoura.png" alt="matheus moura">
+    </div>
+  </header>
 
-  </div>
-  <div>
-    <img id="minha_foto" src="MatheusMoura.png" alt="matheus moura">
-  </div>
+  <ol id="licoes_aprendidas">
+    <li>Git</li>
+    <li>GitHub</li>
+    <li>Unix</li>
+    <li>Bash</li>
+    <li>Slack</li>
+    <li>Zoom</li>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>Shell</li>
+    <li>Fundamentos do Desenvolvimento Web</li>
+  </ol>
+  <ol id="licoes_a_aprender">
+    <li>Java Script</li>
+    <li>Array e Loop</li>
+    <li>Logica de programação</li>
+    <li>Objetos e Funções</li>
+    <li>DOM e seletores</li>
+    <li>Web Storage</li>
+    <li>Forms</li>
+    <li>Css Flexbox</li>
+    <li>Jest</li>
+    <li>React</li>
+  </ol>
+  <article>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil aut voluptatem, a officia quos ut quas, facere esse
+    molestias, reiciendis tempore quae adipisci? Possimus, quia aut aperiam fuga perferendis velit.
+  </article>
+  <section>
+    <aside>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas facere veniam corrupti cupiditate. Nihil illo
+      consequuntur excepturi nobis quo ipsum corporis amet sequi veniam, ducimus quisquam natus laboriosam numquam
+      asperiores?
+    </aside>
+  </section>
+  <footer id="rodape">
+    <h3>
+      Matheus Moura
+    </h3>
+  </footer>
 </body>
 
 </html>
