--- a/index.html
+++ b/index.html
@@ -77,6 +77,49 @@
         <aside>
             <p>A aprendizagem demanda tempo e disciplina, e isso eu só aprendi com o tempo - ou seja, errando e aprendendo. Esse processo é fundamental.</p>
         </aside>
+
+        <section>
+            <h2>Soft skills essenciais a serem desenvolvidas ao longo do tempo de Trybe</h2>
+            <p>Nem só de técnica é feito um desenvolvedor. Para além dela, é essencial que um bom profissional possua soft skills que o diferenciem. O diferencial do curso de Desenvolvimento Web da Trybe é que, além das hard skills, temos a oportunidade de desenvolver competências sociemocionais fundamentais.</p>
+            <table>
+                <tr>
+                    <th>Inteligência Emocional</th>
+                    <th>Comunicação</th>
+                    <th>Colaboração</th>
+                    <th>Pensamento Crítico</th>
+                    <th>Criatividade</th>
+                    <th>Liderança</th>
+                </tr>
+                <tr>
+                    <td>Autoconhecimento</td>
+                    <td>Escuta ativa</td>
+                    <td>Senso de time</td>
+                    <td>Resolução de problemas</td>
+                    <td>Inovação</td>
+                    <td>Organização</td>
+                </tr>
+                <tr>
+                    <td>Resiliência</td>
+                    <td>Dar e receber</td>
+                    <td>Respeito e gentileza</td>
+                    <td>Raciocício lógico</td>
+                    <td>Criação</td>
+                    <td>Autonomia</td>
+                </tr>
+                <tr>
+                    <td>Empatia</td>
+                    <td>Assertividade</td>
+                    <td>Inclusão e diversidade</td>
+                    <td>Tomada de decisão</td>
+                    <td>Curiosidade</td>
+                    <td>Proatividade</td>
+                </tr>
+                <tr>
+                    <td>Autogestão</td>
+                    <td>Negociação</td>
+                </tr>
+            </table>
+        </section>
     </main>
 
     <footer id="rodape">
