--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   </header>
   <main>
     <img id="minha_foto" src="img/orlando.jpg" alt="homem em um shopping">
+    
     <section>
+      <h2 class="list_title">Lições</h2>
+
       <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Shell</li>
@@ -26,6 +29,19 @@
         <li>Boas práticas em equipe</li>
         <li>Slack</li>
       </ol>
+
+      <ul id="licoes_a_aprender">
+        <li>JavaScript</li>
+        <li>Jest</li>
+        <li>React</li>
+        <li>Metodologias Ágeis</li>
+        <li>Redux</li>
+        <li>node</li>
+        <li>RestFull</li>
+        <li>MongoDB</li>
+        <li>Solid</li>
+        <li>Python</li>
+      </ul>
     </section>
   </main>
 </body>
