--- a/index.html
+++ b/index.html
@@ -15,34 +15,36 @@
         <article>
             <img id="minha_foto" src="./perfil.jpeg" alt="Minha foto">
             <a href="https://github.com/KevinSena" target="_blank">Kevin Sena</a>
-            <section>
-                <h3>Lições</h3>
-                <ol id="licoes_aprendidas">
-                    <li>Unix</li>
-                    <li>Git</li>
-                    <li>Github</li>
-                    <li>Empatia</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Slack</li>
-                    <li>Zoom</li>
-                    <li>Inspect</li>
-                    <li>Semantic HTML</li>
-                </ol>
-                <ul id="licoes_a_aprender">
-                    <li>JavaScript</li>
-                    <li>DOM</li>
-                    <li>Forms</li>
-                    <li>CSS Responsive</li>
-                    <li>ES6</li>
-                    <li>HOF</li>
-                    <li>Unit Tests</li>
-                    <li>React</li>
-                    <li>Node</li>
-                    <li>SQL</li>
-                </ul>
-            </section>
+            <h3>Artigo</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore fugit saepe modi ea, quis quaerat incidunt vel enim necessitatibus ad? Non molestiae, sapiente veniam facere nostrum temporibus eos? Et, ipsam. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum hic similique magni corporis? Fuga quos quo, similique rem fugiat cumque optio molestiae veritatis cupiditate nulla iusto eligendi quia, ducimus error!</p>
         </article>
+        <section>
+            <h3>Lições</h3>
+            <ol id="licoes_aprendidas">
+                <li>Unix</li>
+                <li>Git</li>
+                <li>Github</li>
+                <li>Empatia</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Slack</li>
+                <li>Zoom</li>
+                <li>Inspect</li>
+                <li>Semantic HTML</li>
+            </ol>
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Unit Tests</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
+        </section>
     </main>
     <footer id="rodape">
         <h1>Todos os direitos reservados, Kevin Sena</h1>
