--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     
     <header id="cabecalho">
-      <h1 id="titulo"></h1>
+      <h1 id="titulo">Lições aprendidas- Trybe</h1>
     </header>
 
-    <img src="rsz_fotoeu.jpg" alt="foto de Alissandra Lima sorrindo" id="minha_foto">
+    <img class="margem" src="rsz_fotoeu.jpg" alt="foto de Alissandra Lima sorrindo" id="minha_foto">
 
-    <ol id="licoes_aprendidas">
+    <ol class="margem" id="licoes_aprendidas">
         <li>Aprender</li>
         <li>Perseverar</li>
         <li>Não desistir</li>
@@ -27,20 +27,20 @@
         <li>Confiar</li>
     </ol>
 
-    <article>Iniciei meus estudo em programação por conta da trybe, conheci a escola através de uma propaganda no instagram, na verdade <br>
+    <article class="margem">Iniciei meus estudo em programação por conta da trybe, conheci a escola através de uma propaganda no instagram, na verdade <br>
         meu irmão que trabalha com ciência de dados já havia me falado dela. Quando passei a ter um contato real com a escola pude encontrar<br>
          nela um ambiente seguro, que vem tornando meu aprendizado cada vez mais tranquilo. Os primeiros dias foram de muito desconforto, pois<br>
           estou fazendo transição de carreira não entendia nada da área, tive que instalar programas que nem conhecia. Sigo confiante, acreditando<br>
            na equipe que está comigo, e amando aprender tudo. </article>
     
-    <section><aside>Logo que cheguei tive dificuldades com o site github,<br>
+    <section class="margem"><aside>Logo que cheguei tive dificuldades com o site github,<br>
          ainda estou me adaptando a ele, além de aprender git e github, aprendi<br>
           como funciona a internet, como estruturar uma pagina com html e<br>
            como estilizá-la com css.</aside></section>
 
     <footer id="rodape"></footer>
 
-    <h2><a href="https://github.com/anaualima" target="_blank">Conheça meu GitHub</a></h2>
+    <nav class="margem"><h2><a href="https://github.com/anaualima" target="_blank">Conheça meu GitHub</a></h2></nav>
 
   </body>
 
