aplicação do requisito 15

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <a href="https://www.linkedin.com/in/arthur1silva1/" target="_blank">New window to my Linkedin page</a>
   
 
+  <article class="lado-esquerdo">
+    
     <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Bash</li>
@@ -48,8 +50,10 @@
         <li>POO</li>
     </ul>
 
+  </article>
+    
 
-  <article>
+  <article class="lado-direito">
     <section>
       <p>Desde outubro de 2020 tinha vontade de entrar na Trybe e não me arrependo de ter dado esse passo. Nesse inicio de carreira em tecnologia, tenho aprendido muitos assuntos acerca de desenvolvimento web, mas tenho aprendido de Unix até CSS, passando por Git e Html, tem sido tudo muito intenso e recompensador.</p>
     </section>
