--- a/index.html
+++ b/index.html
@@ -15,18 +15,31 @@
   <main>
     <img id="minha_foto" src="minha_foto.jpg" alt="Mulher olhando para a frente com um leve sorriso">
 
-    <ol>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+    <ol id="licoes_aprendidas">
+      <li>Unix</li>
+      <li>Bash</li>
+      <li>Git</li>
+      <li>GitHub</li>
+      <li>Html</li>
+      <li>Css</li>
+      <li>Internet</li>
+      <li>Html & css estruturas de páginas</li>
+      <li>Html & Css Seletores de posicionamento</li>
+      <li>Html Semantico</li>
     </ol>
+
+    <ul id="licoes_a_aprender">
+      <li>JavaScript</li>
+      <li>Forms</li>
+      <li>Flexbox</li>
+      <li>Css responsivo</li>
+      <li>dddd</li>
+      <li>ddddd</li>
+      <li>ddddd</li>
+      <li>dddd</li>
+      <li>dddd</li>
+      <li>dddd</li>
+    </ul>
   </main>
 </body>
 </html>
