Adiciona licoes a aprender e rodape

--- a/index.html
+++ b/index.html
@@ -13,20 +13,41 @@
       <img id="minha_foto" alt="Gabriel de casaco amarelo" src="foto.jpeg">
       <hr>
       <section>
-        <h2>Lições Aprendidas</h2>
-        <ol id="licoes_aprendidas">
-          <li>Bash</li>
-          <li>Git e GitHub</li>
-          <li>SoftSkills</li>
-          <li>Disciplina</li>
-          <li>Colaboração</li>
-          <li>Boas práticas</li>
-          <li>Lógica de programação</li>
-          <li>Html (superficialmente)</li>
-          <li>Css (superficialmente)</li>
-          <li>Html semântico</li>
-        </ol>
+        <div>
+          <h2>Lições Aprendidas</h2>
+          <ol id="licoes_aprendidas">
+            <li>Bash</li>
+            <li>Git e GitHub</li>
+            <li>SoftSkills</li>
+            <li>Disciplina</li>
+            <li>Colaboração</li>
+            <li>Boas práticas</li>
+            <li>Lógica de programação</li>
+            <li>Html (superficialmente)</li>
+            <li>Css (superficialmente)</li>
+            <li>Html semântico</li>
+          </ol>
+        </div>
+        <div>
+          <h2>Lições a aprender</h2>
+          <ul id="licoes_a_aprender">
+            <li>Mais sobre Bash</li>
+            <li>Mais sobre Git</li>
+            <li>Aperfeiçoar SoftSkills</li>
+            <li>Aprofundar em Lógica</li>
+            <li>Mais sobre Html</li>
+            <li>Mais sobre Css</li>
+            <li>JavaScript</li>
+            <li>Front-end</li>
+            <li>Back-end</li>
+            <li>Ciência da computação</li>
+          </ul>
+        </div>
       </section>
+      <hr>
     </main>
+    <footer id="rodape">
+      <p>Você pode clicar <a href="https://jovemnerd.com.br/" target="_blank">aqui</a> para acessar um blog de notícias sobre o mundo geek!</p>
+    </footer>
   </body>
 </html>
