Todos os requisitos básicos atendidos

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     
 
-    <section>
+    <nav>
         <a href="https://blog.betrybe.com/"  target="_blank" >Link externo do blog da trybe </a>
-    </section>
+    </nav>
 
     <aside class="passagem-aprendizado"> <h2>Crie uma seção que conta uma passagem sobre seu aprendizado</h2>
         <p>A seção deverá possuir mais de 100 caracteres e menos de 300, além disto deve possuir a tag aside.<br>A seção deverá possuir mais de 100 caracteres e menos de 300, além disto deve possuir a tag aside.</p>
