--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
    <div id="cabecalho">
        <h1 id="titulo">Olá meu nome é Izabela</h1>
-   </div>   
+   </div>
+   <img id="minha_foto" src="minhafoto.png"   
   </body>
 </html>
