--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <img src="foto.jpg" alt="uma foto minha" id="minha_foto">
 
-    <h3>Lições</h3>
+    <h2>Lições</h2>
     <div class="lists">
       <ol id="licoes_aprendidas">
         <li>Unix & Bash</li>
@@ -42,6 +42,14 @@
         <li>SQL</li>
       </ul>      
     </div>
+
+    <h2>Meus Aprendizados</h2>
+    <article>
+      Eu já possuo varias habilidades tecnicas, então o que está 
+      mais me agregando são a parte de Soft Skills, mas também tem muita 
+      coisa que eu não sabia na parte das Hard Skills (Parte tecnica).
+      Saindo das habilidades, estou gostando bastante também da comunidade da Trybe.
+    </article>
   </div>
   <footer class="text-center" id="rodape">
     <p>
