--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
  </ul> 
 </ul>
 </div>
+<div id="article">
+<article> O sonho começou tem um tempo, pesquisava a profissão sem saber muito bem o que era e passei a perguntar para amigos mais próximos, como era a rotina de um DEV? 
+    Gostei muito do que ouvi e vi. Decidi correr atrás. Pesquisei muito e encontrei a Trybe. Uma escola de desenvolvimento web. O questionamento comum era: "Será que eu consigo?".
+    Fiz o curso preparatório, estudei e me dediquei muito, o teste não foi fácil, mas consegui passar. Depois veio a entrevista, precisei fazer no meu ambiente de trabalho mesmo, fiquei nervoso
+    mas deu tudo certo.
+    Hoje, me sinto lisonjeado por estar aqui, não tendo 30 dias de curso e já estando com um conhecimento que eu jamais imaginei ter e tão rápido. E essa página é para provar isso!
+    Com uma equipe <b>MARAVILHOSA</b>, eles me dão todo o suporte para que tudo dê certo e que o caminho do aprendizado não pare nunca. Já aprendi Linux, hoje em dia uso o ubunto,
+    Unix e Bash, Internet e a dupla HTML e CSS. É muito gratificante pode estar aqui e aprender tudo isso tão rápido e de uma forma tão fixa. Obrigado a todos os Facilitadores, Instrutores, Amigos de turma e o time de SoftSkills,
+    vocês são a parte fundamental para isso aqui tudo estar acontecendo #VQV! 
+</article>
+
+
+
+</div>
 
 <footer id="rodape"><a link href="http://betrybe.com" target="_blank"> Clique aqui </link></a> e conheça a Trybe    </footer>
 
