--- a/index.html
+++ b/index.html
@@ -4,24 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Lessons Learned</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header id="cabecalho">
-    <h1 id="titulo">titulo</h1>
+    <h1 id="titulo">Lessons Learned</h1>
   </header>
+  <nav>
+    <ul>
+      <li><a href="#artigo">Artigo</a></li>
+      <li><a href="#licoes_aprendidas">Lições Aprendidas</a></li>
+      <li><a href="#licoes_a_aprender">Lições a Aprender</a></li>
+    </ul>
+  </nav>
   <img id="minha_foto" src="fredi-wilkens.jpeg" alt="foto de Frederico Wilkens de frente e sorrindo">
+  <section>
+    <article id="artigo">
+      <h2>Sobre meu aprendizado</h3>
+      <p>Iniciei minha jornada na Trybe através do processo seletivo e do curso introdutório chamado Primeiros Passos na Programação onde pude ver o básico do JavaScript e aprender sobre lógica de programação. Após iniciar de fato no curso já aprendi diversos conteúdos, o mais importante é que sigo sendo estimulado pela Trybe a ir além do conteúdo apresentado e aprender a aprender. Não tem sido uma caminhada tranquila, pois tudo é muito novo e complexo, mas muito gratificante de continuar avançando.</p>
+    </article>
   
-  <article>
-    <h3>Sobre meu aprendizado</h3>
-    <p>Iniciei minha jornada na Trybe através do processo seletivo e do curso introdutório chamado Primeiros Passos na Programação onde pude ver o básico do JavaScript e aprender sobre lógica de programação. Após iniciar de fato no curso já aprendi diversos conteúdos, o mais importante é que sigo sendo estimulado pela Trybe a ir além do conteúdo apresentado e aprender a aprender. Não tem sido uma caminhada tranquila, pois tudo é muito novo e complexo, mas muito gratificante de continuar avançando.</p>
-  </article>
-  
-  <aside>
-    <p>Não é fácil, mas é recompensador. Desde que iniciei minha jornada na Trybe coloquei o meu aprendizado como principal prioridade e tenho me entregado a cada dia para conseguir absorver o conteúdo proposto.</p>
-  </aside>
-  
+    <aside>
+      <p>Não é fácil, mas é recompensador. Desde que iniciei minha jornada na Trybe coloquei o meu aprendizado como principal prioridade e tenho me entregado a cada dia para conseguir absorver o conteúdo proposto.</p>
+    </aside>
+  </section>
   <ol id="licoes_aprendidas">
     <li>Unix</li>
     <li>Bash</li>
