--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <header id="cabecalho" class="header">
     <h1 id="titulo">Lessons Learned</h1>
   </header>
+  <section>
+    <img id="minha_foto"
+      src="https://media-exp1.licdn.com/dms/image/C4D03AQGNzMBMSt9ARQ/profile-displayphoto-shrink_800_800/0/1628638444292?e=1635379200&v=beta&t=ppkX48-iCDbSTrt333QTNw3CuyHcgXSi_iFDUWnOFJU"
+      alt="Jovem preta com cabelo cacheado solto vista de frente">
+  </section>
 </body>
 
 </html>
