--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@
             </ol>
         </section>
 
+        <section>
+            <ul id="licoes_a_aprender">
+                <li>Dom</li>
+                <li>Forms</li>
+                <li>Semantic</li>
+                <li>ES6</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>C++</li>
+                <li>HOF</li>
+                <li>Dom</li>
+                <li>Inspect</li>
+            </ul>
+        </section>
+
         
         
 
