--- a/index.html
+++ b/index.html
@@ -45,6 +45,16 @@
           <li>Forms</li>
       </ul>
   </div>
+  <section>
+      <article>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum quis nemo ipsum officia doloribus, perferendis culpa nam neque odit, modi corrupti nulla velit ullam laborum similique, quaerat quae fugit temporibus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum quos natus laudantium dolore. Explicabo quis excepturi voluptatum quaerat labore blanditiis eos nostrum distinctio officiis id. Vel pariatur recusandae quidem dolores.
+      </article>
+  </section>
+  <section>
+      <aside>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vitae eligendi voluptates placeat rerum accusantium illo excepturi nostrum illum beatae maxime quaerat ratione assumenda, facere aliquid tempora iure amet error!
+      </aside>
+  </section>
   <footer id="rodape"></footer>
 </body>
 </html>
