Requisitos obrigatórios cumpridos

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   </head>
   <body>
     <header id="cabecalho">
-      <h1 id="titulo">Título</h1>
+      <h1 id="titulo">Lições aprendidas na Trybe!</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Detalhes</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <img
@@ -15,7 +22,8 @@
         alt="Foto de rosto do autor da página"
         id="minha_foto"
       />
-      <ol id="licoes_aprendidas">
+      <section>
+        <ol id="licoes_aprendidas">
           <li>HTML</li>
           <li>CSS</li>
           <li>Git</li>
@@ -26,8 +34,8 @@
           <li>Box-Model</li>
           <li>Descendência de classes</li>
           <li>Display (inline, block e inline-block)</li>
-      </ol>
-      <ul id="licoes_a_aprender">
+        </ol>
+        <ul id="licoes_a_aprender">
           <li>JavaScript</li>
           <li>React</li>
           <li>Node</li>
@@ -38,8 +46,26 @@
           <li>Testes Unitários</li>
           <li>DOM</li>
           <li>CSS Responsivo</li>
-      </ul>
-      <a href="https://www.w3schools.com/" target="_blank">Maiores referências sobre HTML, acesse a página da W3Schools (em inglês)</a>
+        </ul>
+      </section>
+      <article>
+        O aprendizado na Trybe consegue ser, ao mesmo tempo, extenuante e
+        satisfatório. O esforço em absorver uma grande quantidade de
+        conhecimento é sempre bem recompensada por ver seu código funcionando na
+        tela. <br />
+        Ainda que falte bastante coisa para que chegue no final (por mais que
+        não pareça, a gente só passou por pouco mais de duas semanas!), é
+        perceptível que nós vamos aprender MUITA coisa, e estaremos mais que
+        preparados para entrar no mercado de trabalho após o curso!
+      </article>
+      <aside>
+        Pessoalmente, eu já havia tentado aprender programação sozinho algumas vezes, no entanto a falta de apoio para tirar dúvidas sempre atrapalhava. <br>
+        Aqui, basta uma mensagem no Slack e toda a comunidade vem ajudar! É bem gratificante!
+      </aside><br><br><br>
+      <a href="https://www.w3schools.com/" target="_blank"
+        >Maiores referências sobre HTML, acesse a página da W3Schools (em
+        inglês)</a
+      >
     </main>
     <footer id="rodape">Todos os direitos reservados, Lucas Oliveira</footer>
   </body>
