--- a/index.html
+++ b/index.html
@@ -46,15 +46,16 @@
                 <li>Melhorar como pessoa</li>
             </ul>
         </section>
-        
-        <article class="lado-esquerdo">
-            <h3>Meu aprendizado</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, distinctio ipsam veniam aperiam officia cum unde praesentium ipsum possimus amet placeat debitis autem. Et, officiis obcaecati ipsa quas nam dicta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dolor, quia dolorem beatae sequi velit ad minima animi esse explicabo consequatur nam, assumenda excepturi cupiditate accusantium porro voluptas. Esse, illo.</p>
-        </article>
-        <aside class="lado-direito">
-            <h4>Passagem sobre aprendizado</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consequuntur, repellendus blanditiis quia incidunt repudiandae saepe modi vel voluptas nam vitae rerum! Deleniti deserunt obcaecati reiciendis? At explicabo hic a?</p>
-        </aside>      
+        <section>
+            <article class="lado-esquerdo">
+                <h3>Meu aprendizado</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, distinctio ipsam veniam aperiam officia cum unde praesentium ipsum possimus amet placeat debitis autem. Et, officiis obcaecati ipsa quas nam dicta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dolor, quia dolorem beatae sequi velit ad minima animi esse explicabo consequatur nam, assumenda excepturi cupiditate accusantium porro voluptas. Esse, illo.</p>
+            </article>
+            <aside class="lado-direito">
+                <h4>Passagem sobre aprendizado</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consequuntur, repellendus blanditiis quia incidunt repudiandae saepe modi vel voluptas nam vitae rerum! Deleniti deserunt obcaecati reiciendis? At explicabo hic a?</p>
+            </aside>
+        </section>   
     </main>
 
     <section>
