Changed Div to Section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </ul>
         </div>
 
-        <div class="artigos">
+        <section class="artigos">
             <article id="lado-esquerdo">
                 <h2>Como foi até agora</h2>
                 <p>
@@ -80,7 +80,7 @@
                     enim eius id.
                 </p>
             </aside>
-        </div>
+        </section>
 
     </main>
 
