--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<header id="cabecalho">
-    <h1 id="titulo">Gabriel de Oliveira Bins</h1>
-</header>
 <body>
+    <header id="cabecalho">
+        <nav>
+
+        </nav>
+        <h1 id="titulo">Gabriel de Oliveira Bins</h1>
+    </header>
     <img id="minha_foto" src="fotoperfil.jpg" alt="foto de perfil">
-    <nav>
+    <section>   
     <ol id="licoes_aprendidas">
         <li>Unix</li>
         <li>Git</li>
@@ -24,7 +27,7 @@
         <li>Inteligencia Emocial</li>
         <li>Semantica HTML</li>
         <li>Comprometimento</li>
-    </ol>
+    </ol>    
     <ul id="licoes_a_aprender">
         <li>JavaScript</li>
         <li>DOM</li>
@@ -36,15 +39,17 @@
         <li>React</li>
         <li>Node</li>
         <li>SQL</li>        
-    </ul>
-    </nav>
+    </ul>   
+    </section> 
     <article>
         <section>
         <p>Entrei na Trybe tem quase 3 semanas, e o aprendizado tem sido fantástico, o curso requer bastante foco e compromisso, essa forma de ensino ativo aonde todo dia é colocado em prática o que é aprendido, é um diferencial enorme, os professores e responsáveis passam o conteudo de uma forma bem compreensível, tenho gostado muito dessa nova fase de aprendizado.</p>
         </section>
     </article>
     <aside>
+        <section>
         <p>O aprendizado na trybe tem sido grande, desde a parte dar hard skills que é a parte de programação em si, como a parte de soft skills, é um diferencial enorme.</p>
+        </section>
     </aside>
     <a href="https://github.com/gabrielbins" target="_blank">GitHub</a>
     <footer>
