--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
         <li>A importância de trabalhar sua saúde mental e inteligência emocional.</li>
         <li>Saber expressar minhas opiniões em equipe.</li>
       </ol>
+      <h2>Aprendizados que desejo ter ao longo do curso:</h2>
+      <ul id="licoes_a_aprender">
+        <li>JavaScript e React para desenvolvimento Front-end.</li>
+        <li>Aprender e melhorar mais a minha inteligência emocional.</li>
+        <li>NodeJS e MongoDB para desenvolvimento Back-end.</li>
+        <li>Trabalhar de forma mais eficiente.</li>
+        <li>Metodologias Ágeis, como Scrum e Kanban.</li>
+        <li>Me tornar um líder melhor.</li>
+        <li>Python e Algoritmos, como introdução à Ciência da Computação.</li>
+        <li>Aprender a organizar melhor meu tempo.</li>
+        <li>Construir códigos mais limpos e organizados.</li>
+        <li>Aprender a passar meu conhecimento de uma forma mais didática para ajudar outras pessoas sempre que puder.</li>
+      </ul>
     </main>
   </body>
 </html>
