--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 </head>
 
 <body>
-  <header id="cabecalho">
-    <section>
-      <h1 id="titulo">O início da <span class="word">jornada</span> começa na <span class="word">Trybe</span>!</h1>
-    </section>
-    <section>
-      <nav id="links">
-        <li><a href="https://github.com/Airtonsilv4" target="_blank">GitHub</a></li>
-        <li><a href="https://www.linkedin.com/in/airton-silva-783780211/" target="_blank">LinkedIn</a></li>
-      </nav>
-    </section>
-  </header>
+    <header id="cabecalho">
+      <section>
+        <h1 id="titulo">O início da <span class="word">jornada</span> começa na <span class="word">Trybe</span>!</h1>
+      </section>
+      <section>
+        <nav id="links">
+          <li><a href="https://github.com/Airtonsilv4" target="_blank">GitHub</a></li>
+          <li><a href="https://www.linkedin.com/in/airton-silva-783780211/" target="_blank">LinkedIn</a></li>
+        </nav>
+      </section>
+    </header>
+  <main>
+    <div>
+      <img id="minha_foto" src="airton.jpg" alt="minha foto">
+    </div>
 
 
 
@@ -28,27 +32,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  </main>
 </body>
 </html>
