--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 
 <body>
    <header id="cabecalho">
-        <h1 id="titulo">O que aprendi em duas semanas como Tryber! </h1></header> 
+        <h1 id="titulo">/home/amanda/o-que-aprendi-em/ <br> Duas semanas como Tryber!!! </h1>
+    </header> 
+
+   <img id="minha_foto" src="WhatsApp Image 2021-08-16 at 14.15.36.jpeg" alt="A foto mostra a Amanda no template da Trybe">
+
 </body>
