--- a/index.html
+++ b/index.html
@@ -7,8 +7,44 @@
 </head>
 <body>
     <header id="cabecalho">
-        <h1 id="titulo">Primeiro Projeto Trybe</h1>
+        <h1 id="titulo">Primeiro Projeto - Trybe</h1>
     </header>
+    <section>
+        <img id="minha_foto" src="project-img.jpg" alt="Foto de Juan Morallys em CampinaGrande-PB">
+    </section>  
     
+    
+    <section class="lista-ordenada">
+        <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Bash</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>HTML</li>
+            <li>HTML Semântico</li>
+            <li>CSS</li>
+            <li>Busca aprimorada</li>            
+            <li>SoftSkills</li>
+            <li>Como funciona a internet</li>
+        </ol>
+    </section>
+    <section class="lista-nao-ordenada">
+        <ul>
+            <li>JavaScript</li>
+            <li>Testes Unitários</li>
+            <li>Funções</li>
+            <li>React</li>
+            <li>Metodologias Ágeis</li>
+            <li>SQL</li>
+            <li>NodeJS</li>
+            <li>Deployment</li>
+            <li>Python</li>
+            <li>Estrutura de dados</li>
+        </ul>
+    </section>
+
+    <footer id="rodape">
+        "Conteúdo compilado por "Juan Morallys", <08/2021>".
+    </footer>
 </body>
 </html>
