--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         </section>
     </aside>
     <a href="https://github.com/gabrielbins" target="_blank">GitHub</a>
-    <footer>
-       <p id="rodape">Criado por Gabriel Bins</p>
+    <footer id="rodape">
+       <p>Criado por Gabriel Bins</p>
     </footer>
 </body>
 </html>
