Correção de class para ID

--- a/index.html
+++ b/index.html
@@ -16,33 +16,34 @@
       <img class="minha_foto" src="https://ialamov.github.io./images/WhatsApp%20Image%202021-03-02%20at%2015.09.07.jpeg" alt="Foto de perfil de Douglas Ialamov">
     </div>
     <section>
-    <ol class="licoes_aprendidas">
-      <li>HTML</li>
-      <li>Tags</li>
-      <li>Semântica</li>
-      <li>CSS</li>
-      <li>Display</li>
-      <li>Background</li>
-      <li>Seletores e Posicionamento</li>
-      <li>Estrutura de páginas de HTML</li>
-      <li>Unix & Bash</li>
-      <li>Git, Github e Internet</li>
-    </ol>
-    <ul class="licoes_aprendidas">
-      <li>Rest</li>
-      <li>JavaScript</li>
-      <li>Flexbox</li>
-      <li>API</li>
-      <li>Funções SQL</li>
-      <li>MongoDB</li>
-      <li>NodeJS</li>
-      <li>Solid e ORM</li>
-      <li>Unix & Bash</li>
-      <li>Deployment</li>
-    </ul>
-  </section>
-  <footer>
-
+      <ol class="licoes_aprendidas">
+        <li>HTML</li>
+        <li>Tags</li>
+        <li>Semântica</li>
+        <li>CSS</li>
+        <li>Display</li>
+        <li>Background</li>
+        <li>Seletores e Posicionamento</li>
+        <li>Estrutura de páginas de HTML</li>
+        <li>Unix & Bash</li>
+        <li>Git, Github e Internet</li>
+      </ol>
+      <ul class="licoes_aprendidas">
+        <li>Rest</li>
+        <li>JavaScript</li>
+        <li>Flexbox</li>
+        <li>API</li>
+        <li>Funções SQL</li>
+        <li>MongoDB</li>
+        <li>NodeJS</li>
+        <li>Solid e ORM</li>
+        <li>Unix & Bash</li>
+        <li>Deployment</li>
+      </ul>
+    </section>
+    <a href="https://www.linkedin.com/in/douglas-ialamov-48a62724/">Linkedin Pessoal</a>
+  <footer class="rodape">
+    <h4>Produzido por Douglas de Oliveira Ialamov</h4>
   </footer>
   </main>
 </body>
