--- a/index.html
+++ b/index.html
@@ -10,35 +10,45 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Meu primeiro projeto na Trybe :)</h1>
+
+        <nav class="menu">
+            <ul>
+                <li><a href="https://github.com/brenotainandev" target="_blank">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/brenotainan" target="_blank">Linkedin</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <img id="minha_foto" src="/breno-perfil.jpg" alt="Foto de Breno Tainan em frente ao espelho, ele está vestido como uma blusa branca e está segurando um celular.">
+    <main>
+        <img id="minha_foto" src="/breno-perfil.jpg" alt="Foto de Breno Tainan em frente ao espelho, ele está vestido como uma blusa branca e está segurando um celular.">
 
-    <ol id="licoes_aprendidas">
-        <li>Zoom</li>
-        <li>Slack</li>
-        <li>Unix</li>
-        <li>Git</li>
-        <li>GitHub</li>
-        <li>Html</li>
-        <li>CSS</li>
-        <li>Autoconhecimento</li>
-        <li>Empatia</li>
-        <li>Html semântico</li>
-    </ol>
+        <ol id="licoes_aprendidas">
+            <li>Zoom</li>
+            <li>Slack</li>
+            <li>Unix</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Html</li>
+            <li>CSS</li>
+            <li>Autoconhecimento</li>
+            <li>Empatia</li>
+            <li>Html semântico</li>
+        </ol>
 
-    <ul id="licoes_a_aprender">
-        <li>JavaScript</li>
-        <li>DOM</li>
-        <li>Forms</li>
-        <li>CSS responsivo</li>
-        <li>ES6</li>
-        <li>HOF</li>
-        <li>Unit Tests</li>
-        <li>React</li>
-        <li>Node</li>
-        <li>SQL</li>
-    </ul>
+        <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>Forms</li>
+            <li>CSS responsivo</li>
+            <li>ES6</li>
+            <li>HOF</li>
+            <li>Unit Tests</li>
+            <li>React</li>
+            <li>Node</li>
+            <li>SQL</li>
+        </ul>
+
+    </main>
 
     <footer id="rodape">
         <h3>Site desenvolvido por Breno Tainan</h3>
