--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
-
-<head lang="pt-br">
+<html lang="pt-br">
+<head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Jornada Trybe</title>
 </head>
 
 <body>
   <!--2. Adicione uma barra superior com um título-->
   <header id="cabecalho">
     <h1 id="titulo">Meu aprendizado</h1>
+    <nav>
+      <ul>
+        <li>Início</li>
+        <li>Lições</li>
+        <li>Aprendizado na Trybe</li>
+        <li>Contatos</li>
+      </ul>
+    </nav>
   </header>
   <!--3. Adicione uma foto sua à página  -->
   <img id="minha_foto" src="minha_foto.jpeg" alt="minha_foto">
@@ -49,21 +58,15 @@
   <article>
     <section>
       <h2>Meu aprendizado na Trybe</h2>
-      <p>A Trybe apresenta um jeito único de fazer a gente aprender, aqui nós não nos desenvolvemos somente para serem
-        programadores, mas sim, tudo que um verdadeiro profissional precisa possuir, como resiliência, respeito e
-        preocupação pelo próximo. Vale afirmar também, que a ela nos fornece um material incrível, bem detalhado e com
-        um nível além do básico. Além disso, conta com uma equipe de funcionários sensacional,que prestam apoio para
-        todos independente do problema.</p>
+      <p>A Trybe apresenta um jeito único de fazer a gente aprender, aqui nós não nos desenvolvemos somente para serem programadores, mas sim, tudo que um verdadeiro profissional precisa possuir, como resiliência, respeito e preocupação pelo próximo. Vale afirmar também, que a ela nos fornece um material incrível, bem detalhado e com um nível além do básico. Além disso, conta com uma equipe de funcionários sensacional,que prestam apoio para todos independente do problema.</p>
     </section>
   </article>
   <!--9. Crie uma seção que conta uma passagem sobre seu aprendizado-->
   <section>
     <aside>
       <h2>Uma passagem na Trybe</h2>
-      <p> O meu primeiro projeto na Trybe, se chamou "lessons-leaned". Neste, fui responsável por montar um site do
-        zero, seguindo diversas regras que me desafiava a todo instante. Se você quiser enfrentar isso também, acesse o
-        site da Trybe e se inscrevendo. </p>
+      <p> O meu primeiro projeto na Trybe, se chamou "lessons-leaned". Neste, fui responsável por montar um site do zero, seguindo diversas regras que me desafiava a todo instante. Se você quiser enfrentar isso também, acesse o site da Trybe e se inscrevendo. </p>
     </aside>
   </section>
-
 </body>
+</html>
