Requisito 12 (bonus) cumprido

--- a/index.html
+++ b/index.html
@@ -16,46 +16,45 @@
           <li><a href="#licoes_aprendidas">Lições aprendidas</a></li>
           <li><a href="#licoes_a_aprender">Lições a aprender</a></li>
           <li><a href="#artigo_principal">Minha jornada</a></li>
-          <li><a href="#quick_fact">Quick fact!</a></li>
+          <li><a href="#fun_fact">Quick fact!</a></li>
           <a target="_blank" href="https://israelss.github.io"
             >Visite meu site (new window)</a
           >
         </ul>
       </nav>
     </header>
-    <img
-      src="profile-photo.jpg"
-      alt="Minha foto"
-      id="minha_foto"
-      width="200px"
-    />
-    <ol id="licoes_aprendidas">
-      <li>HTML: Estruturas básicas</li>
-      <li>HTML: Semântica!</li>
-      <li>CSS: Estilos básicos</li>
-      <li>CSS: Seletores e posicionamento</li>
-      <li>Git: Comandos básicos</li>
-      <li>Git: Fluxo de trabalho</li>
-      <li>GitHub: Gerenciando repositórios remotos</li>
-      <li>GitHub Pages: Minha página na Internet!</li>
-      <li>Soft skills: A importância de ser inteiro</li>
-      <li>Kahoot: How to be the fastest man alive! ⚡</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li>SQL</li>
-      <li>NoSQL</li>
-      <li>React</li>
-      <li>Comunicação</li>
-      <li>Liderança</li>
-      <li>Javascript</li>
-      <li>Testes unitários</li>
-      <li>Testes de integração</li>
-      <li>Testes automatizados</li>
-      <li>Continuous Integration (CI)</li>
-    </ul>
-
-    <main id="artigo_principal">
-      <article>
+    <main>
+      <img
+        src="profile-photo.jpg"
+        alt="Minha foto"
+        id="minha_foto"
+        width="200px"
+      />
+      <ol id="licoes_aprendidas">
+        <li>HTML: Estruturas básicas</li>
+        <li>HTML: Semântica!</li>
+        <li>CSS: Estilos básicos</li>
+        <li>CSS: Seletores e posicionamento</li>
+        <li>Git: Comandos básicos</li>
+        <li>Git: Fluxo de trabalho</li>
+        <li>GitHub: Gerenciando repositórios remotos</li>
+        <li>GitHub Pages: Minha página na Internet!</li>
+        <li>Soft skills: A importância de ser inteiro</li>
+        <li>Kahoot: How to be the fastest man alive! ⚡</li>
+      </ol>
+      <ul id="licoes_a_aprender">
+        <li>SQL</li>
+        <li>NoSQL</li>
+        <li>React</li>
+        <li>Comunicação</li>
+        <li>Liderança</li>
+        <li>Javascript</li>
+        <li>Testes unitários</li>
+        <li>Testes de integração</li>
+        <li>Testes automatizados</li>
+        <li>Continuous Integration (CI)</li>
+      </ul>
+      <article id="artigo_principal">
         <header><h2>Minha jornada na Trybe</h2></header>
         <section>
           <p>
@@ -68,12 +67,47 @@
           </p>
         </section>
       </article>
+
+      <table>
+        <caption>
+          Um comando novo para o arsenal
+        </caption>
+        <thead>
+          <tr>
+            <th colspan="2">Apropos</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Pra que serve:</td>
+            <td>pesquisa por nomes e descrições de páginas de manual</td>
+          </tr>
+          <tr>
+            <td>Sintaxe:</td>
+            <td>
+              <code>
+                apropos [-dalv?V] [-e|-w|-r] [-s lista] [-m sistema[,...]] [-M
+                caminho] [-L localidade] [-C arquivo] palavra-chave ...
+              </code>
+            </td>
+          </tr>
+          <tr>
+            <td>Pode ser substituído por:</td>
+            <td><code>man -k</code></td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="2">Fonte: <code>man apropos</code></td>
+          </tr>
+        </tfoot>
+      </table>
     </main>
-    <aside id="quick_fact">
-      <h2>Quick fact!</h2>
+    <aside id="fun_fact">
+      <h2>Fun fact!</h2>
       <p>
         Mesmo já possuindo algum conhecimento em programação, estou aprendendo
-        algo novo a cada dia. Como o comando <kbd>apropos</kbd>
+        algo novo a cada dia. Como o comando <code>apropos</code>.
       </p>
     </aside>
     <footer id="rodape"></footer>
