finaliza os requerimentos HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans:ital,wght@0,400;0,600;1,400&display=swap"
+    rel="stylesheet">
+
 </head>
 
 <body>
@@ -16,6 +19,9 @@
     </div>
     <div>
       <img id="minha_foto" src="MatheusMoura.png" alt="matheus moura">
+    </div>
+    <div id="links">
+      <a href="https://www.linkedin.com/in/matheus-moura-415ba1209/" target="blank">Linkedin</a>
     </div>
   </header>
 
@@ -55,9 +61,9 @@
     </aside>
   </section>
   <footer id="rodape">
-    <h3>
+    <h2>
       Matheus Moura
-    </h3>
+    </h2>
   </footer>
 </body>
 
