--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
         <li>Aprender a passar meu conhecimento de uma forma mais didática para ajudar outras pessoas sempre que puder.</li>
       </ul>
     </main>
+
+    <footer id="rodape">
+      <p>Página desenvolvida por Rael Nogueira Pires no Projeto [Lessons Learned], 2021.</p>
+    </footer>
   </body>
 </html>
