--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             </ul>
         </section>
     </main>
+    <aside>
+        <h3>Meu aprendizado</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id inventore accusamus, cupiditate consequuntur quos praesentium commodi, doloribus harum ad rem veritatis magni odit. Ducimus, eos molestias iusto amet labore quae!</p>
+    </aside>
     <footer id="rodape">
         <h1>Todos os direitos reservados, Kevin Sena</h1>
     </footer>
