--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
   <div>
       <h2>
         <ol id="licoes_aprendidas">
-          <li> </li>
-        </ol>
-      </h2>
-  </div>
-  <div>
-    <h2>
-      <ul id="licoes_a_aprender">
-        <li> </li>
-      </ul>
-    </h2>
-   </div>
-      
+          <li>Fundamentos do desenvolvimento</li>
+          <li> Introdução Unix e Shell</li>
+          <li>Unix</li>
+          <li>Bash</li>
+          <li>Para que serve GIT</li>
+          <li>GitHub</li>
+          <li>Como a Internet funciona</li>
+          <li>Introdução HTML e CSS</li>
+          <li>HTML</li>
+          <li>CSS</li>
+        </ol>  
+       </h2>
+  </div>     
 </body>
 </html>
