--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <img id="minha_foto" src="project-img.jpg" alt="Foto de Juan Morallys em CampinaGrande-PB">
     </section>  
     
+    <a href="https://www.linkedin.com/in/juanmorallys/">LinkedIn</a>
     
     <section class="lista-ordenada">
         <ol id="licoes_aprendidas">
