--- a/index.html
+++ b/index.html
@@ -6,40 +6,60 @@
   </head>
   <body>
     <header id="cabecalho">
-      <h1 id="titulo">Título</h1>
+      <h1 id="titulo">Lições aprendidas na Trybe</h1>
     </header>
-    <img src="me.jpeg" alt="Eu, Natã, com uma blusa azul e uma parede laranja ao fundo" id="minha_foto">
-    <a href="https://linkedin.com/in/nataelienai" target="_blank">Natã Elienai</a>
-    <ol id="licoes_aprendidas">
-      <li>Unix</li>
-      <li>Shell</li>
-      <li>Git</li>
-      <li>GitHub</li>
-      <li>Internet</li>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>HTML Semântico</li>
-      <li>Emoções</li>
-      <li>Empatia</li>
-    </ol>
-    <ul id="licoes_a_aprender">
-      <li>JavaScript</li>
-      <li>DOM</li>
-      <li>CSS Responsivo</li>
-      <li>Testes Unitários</li>
-      <li>Jest</li>
-      <li>React</li>
-      <li>Metodologias Ágeis</li>
-      <li>SQL</li>
-      <li>MongoDB</li>
-      <li>Estrutura de Dados</li>
-    </ul>
-    <article>
-      <p>Até então, escolher entrar na Trybe foi uma das melhores decisões que tive no último mês. Desde que ingressei, reaprendi muitos dos conhecimentos técnicos que já havia aprendido na faculdade, como HTML, CSS e protocolos de rede, mas de uma forma muito mais dinâmica e convidativa. Além disso, mesmo com esse pouco tempo, também aprendi a dar o devido valor às soft skills e como essas habilidades socioemocionais afetam o nosso dia a dia.</p>
-    </article>
-    <aside>
-      <p>Iniciei a minha jornada na Trybe já aprendendo sobre o sistema operacional Unix e o Bash, um dos shells mais populares. Logo depois passei por Git e GitHub, aprendendo sobre os seus comandos e suas funcionalides essenciais, chegando até o bloco atual, que trata de HTML e CSS.</p>
-    </aside>
+    <main>
+      <section>
+        <h2>Eu, Natã!</h2>
+        <img src="me.jpeg" alt="Eu, Natã, com uma blusa azul e uma parede laranja ao fundo" id="minha_foto">
+        <nav>
+          <a href="https://linkedin.com/in/nataelienai" target="_blank">Natã Elienai</a>
+        </nav>
+      </section>
+      <section>
+        <h2>Lições</h2>
+        <section>
+          <h3>Lições aprendidas</h3>
+          <ol id="licoes_aprendidas">
+            <li>Unix</li>
+            <li>Shell</li>
+            <li>Git</li>
+            <li>GitHub</li>
+            <li>Internet</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>HTML Semântico</li>
+            <li>Emoções</li>
+            <li>Empatia</li>
+          </ol>
+        </section>
+        <section>
+          <h3>Lições a aprender</h3>
+          <ul id="licoes_a_aprender">
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>CSS Responsivo</li>
+            <li>Testes Unitários</li>
+            <li>Jest</li>
+            <li>React</li>
+            <li>Metodologias Ágeis</li>
+            <li>SQL</li>
+            <li>MongoDB</li>
+            <li>Estrutura de Dados</li>
+          </ul>
+        </section>
+      </section>
+      <section>
+        <h2>Meu aprendizado</h2>
+        <article>
+          <p>Até então, escolher entrar na Trybe foi uma das melhores decisões que tive no último mês. Desde que ingressei, reaprendi muitos dos conhecimentos técnicos que já havia aprendido na faculdade, como HTML, CSS e protocolos de rede, mas de uma forma muito mais dinâmica e convidativa. Além disso, mesmo com esse pouco tempo, também aprendi a dar o devido valor às soft skills e como essas habilidades socioemocionais afetam o nosso dia a dia.</p>
+        </article>
+      </section>
+      <aside>
+        <h2>Um breve resumo</h2>
+        <p>Iniciei a minha jornada na Trybe já aprendendo sobre o sistema operacional Unix e o Bash, um dos shells mais populares. Logo depois passei por Git e GitHub, aprendendo sobre os seus comandos e suas funcionalides essenciais, chegando até o bloco atual, que trata de HTML e CSS.</p>
+      </aside>
+    </main>
     <footer id="rodape">
       <p>Criado por Natã Elienai, 2021.</p>
     </footer>
