--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <!DOCTYPE html>
 <html lang="PT-BR>
 <meta charset= "utf-8">
-<head>
+<headder>
 <link rel="stylesheet" type="text/css"  href="style.css">
 <title> Lessons Learned </title>
-</head>   
-<body class="body">
 <div id="cabecalho">
     <h1 id="titulo">Título </h1>
+    <nav id="botoes"> LinkedIn Instagram GitHub</nav>
 </div>
+</header>  
+<body class="body">
     <img id="minha_foto" src="celso.jpg" alt="Minha foto no trabalho">
 <div>
 <ul id="licoes_aprendidas"> 
@@ -44,15 +45,17 @@
     Fiz o curso preparatório, estudei e me dediquei muito, o teste não foi fácil, mas consegui passar. Depois veio a entrevista, precisei fazer no meu ambiente de trabalho mesmo, fiquei nervoso
     mas deu tudo certo.
     Hoje, me sinto lisonjeado por estar aqui, não tendo 30 dias de curso e já estando com um conhecimento que eu jamais imaginei ter e tão rápido. E essa página é para provar isso!
-    Com uma equipe <b>MARAVILHOSA</b>, eles me dão todo o suporte para que tudo dê certo e que o caminho do aprendizado não pare nunca. Já aprendi Linux, hoje em dia uso o ubunto,
-    Unix e Bash, Internet e a dupla HTML e CSS. É muito gratificante pode estar aqui e aprender tudo isso tão rápido e de uma forma tão fixa. Obrigado a todos os Facilitadores, Instrutores, Amigos de turma e o time de SoftSkills,
+    Com uma equipe <b>MARAVILHOSA</b>, eles me dão todo o suporte para que tudo dê certo e que o caminho do aprendizado não pare nunca. É muito gratificante pode estar aqui e aprender tudo isso tão rápido e de uma forma tão fixa. Obrigado a todos os Facilitadores, Instrutores, Amigos de turma e o time de SoftSkills,
     vocês são a parte fundamental para isso aqui tudo estar acontecendo #VQV! 
+    <hr>
 </article>
-
+<section id="aside"> 
+    Desde o dia 09 de Agosto eu já posso dizer com tranquilidade que seu usar Linux, hoje em dia uso o ubunto,
+    consigo usar os comandos usando o Unix e Bash, sei como funciona os padrões e protocolos da Internet e consigo criar e estilizar uma página com a dupla HTML e CSS. Além de usar o GIT e o GITHUB para que todo o meu trabalho seja visto por todo mundo.
+    </section>
 
 
 </div>
-
 <footer id="rodape"><a link href="http://betrybe.com" target="_blank"> Clique aqui </link></a> e conheça a Trybe    </footer>
 
 
