--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
     </section>
 
-    <article>
-        <div class="lista_ordenada">
+    <article class="article">
+        <div class="lista_ordenada lado-esquerdo">
             <h2>Lições aprendidas</h2>
             <ol id="licoes_aprendidas">
                 <li>Fundamentos do Desenvolvimento Web</li>
@@ -36,6 +36,22 @@
                 <li>HTML & CSS: Seletores e posicionamento</li>
                 <li>HTML Semântico</li>
             </ol>
+        </div>
+
+        <div class="lista_nao_ordenada lado-direito">
+            <h2>Lições a serem aprendidas</h2>
+            <ul id="licoes_a_aprender">
+                <li>Javascript</li>
+                <li>DOM</li>
+                <li>Testes Automatizados</li>
+                <li>React</li>
+                <li>Metodologias Ágeis</li>
+                <li>SQL</li>
+                <li>MongoDB</li>
+                <li>Node</li>
+                <li>Python</li>
+                <li>Algoritmos</li>
+            </ul>
         </div>
     </article>
 
