--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
      <img src="minha_foto.jpg" alt="garoto sorrindo" id="minha_foto">
      
      <main>
-         <section id= "section_list">
-            <h2>Lições aprendidas</h2>
+         <section id= "section_list_1">
+             <h3>Lições</h3>
             <ol id="licoes_aprendidas">
                 <li>Unix</li>
                 <li>Git</li>
@@ -29,6 +29,19 @@
                 <li>Internet</li>
                 <li>Emoções</li>
             </ol>
+            
+            <ul id="licoes_a_aprender">
+                <li>JavaScript</li>
+                <li>DOM</li>
+                <li>Forms</li>
+                <li>CSS Responsive</li>
+                <li>ES6</li>
+                <li>HOF</li>
+                <li>Testes Unitários</li>
+                <li>React</li>
+                <li>Node</li>
+                <li>SQL</li>
+            </ul>
         </section>
 
      </main>
