--- a/index.html
+++ b/index.html
@@ -10,25 +10,45 @@
   </header>
   <body>
     <img id="minha_foto" src="foto_fas.jpg" />
-    <br />
     <p><a href="https://www.linkedin.com/in/fasouzarj">Flávio Alves</a></p>
     <nav>
-      <ol id="licoes_aprendidas">
-        <table>
+      <table>
+        <tr>
+          <th>Lições</th>
+        </tr>
+        <tr>
           <td>
-            <li>Unix</li>
-            <li>Bash</li>
-            <li>Git</li>
-            <li>Git Hub</li>
-            <li>Internet</li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>Autoconhecimento</li>
-            <li>Empatia</li>
-            <li>Profissionalismo</li>
+            <ol id="licoes_aprendidas">
+              <li>Unix</li>
+              <li>Bash</li>
+              <li>Git</li>
+              <li>Git Hub</li>
+              <li>Internet</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Autoconhecimento</li>
+              <li>Empatia</li>
+              <li>Profissionalismo</li>
+            </ol>
           </td>
-        </table>
-      </ol>
+        </tr>
+        <tr>
+          <td>
+            <ul id="licoes_a_aprender">
+              <li>JavaScript</li>
+              <li>Python</li>
+              <li>Java</li>
+              <li>Node</li>
+              <li>UX</li>
+              <li>UI</li>
+              <li>Kotlin</li>
+              <li>Kubernetes</li>
+              <li>Gestão do Tempo</li>
+              <li>Gestão de Crises</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
     </nav>
   </body>
 </html>
