--- a/index.html
+++ b/index.html
@@ -64,13 +64,31 @@
             eu ainda não aprendi o suficiente</p>
           </section>
         </aside>
+
+        <footer id="rodape">
+          <p>Todos os direitos reservados,</p>
+          <table>
+            <thead>
+            <tr>
+                <th>Nome</td>
+                <th>Idade</td>
+                <th>Profissão</td>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Wellington</td>
+                <td>21 anos</td>
+                <td>Desenvolvedor Web</td>
+              </tr>
+            </tbody>
+          </table>
+        </footer>
   </main>
 
   
 
-  <footer id="rodape">
-    <p>Todos os direitos reservados, Wellington</p>
-  </footer>
+  
     
 </body>
 </html>
