--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="cabecalho"> 
-        <h1 id="titulo">Título</h1>
+        <h1 id="titulo">Lessons Learned</h1>
         <nav>
             <ul id="navegacao">
             <li>Página Inicial</li>
@@ -17,9 +17,24 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main id="main">
         <section>
             <img id="minha_foto" src="minha-foto.jpg" alt="Foto de Felipe Sanches">
+            <table class="tabela1">
+                <p class="tabela1"><strong>Sobre Mim</strong></p>
+                <tr class="tabela1">
+                    <td class="tabela1">Idade:</td>
+                    <td class="tabela1">28 Anos</td>
+                </tr>
+                <tr class="tabela1">
+                    <td class="tabela1">Cidade:</td>
+                    <td class="tabela1">Conselheiro lafaiete-MG</td>
+                </tr>
+                <tr class="tabela1">
+                    <td class="tabela1">Hobbies:</td>
+                    <td class="tabela1">Jogos/Séries/Animes</td>
+                </tr>
+            </table>
         </section>
         <section>
             <ol id="licoes_aprendidas">
