--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     </header>
     <img id="minha_foto" src="myPhoto.jpeg" alt="Minha foto">
     <main>
+      <section>
+        <p>Veja alguns dos exercicios que já desenvolvi como estudante da Trybe no meu <a href="https://github.com/raelnogpires/exercicios-trybe" target="_blank">repositório GitHub</a>.</p>
+      </section>
       <h2>Alguns aprendizados deste começo de Trybe:</h2>
       <ol id="licoes_aprendidas">
         <li>Unix e SO's que o usam como base.</li>
