--- a/index.html
+++ b/index.html
@@ -10,7 +10,32 @@
 <body>
     <header id="cabecalho">
         <h1 id="titulo">Lições Aprendidas - TRYBE!</h1>
-        <img id="minha_foto" src="fotoperfil/33186865_1963908880320981_5776167367381876736_n.jpg" alt="">
     </header>
+    <img id="minha_foto" src="fotoperfil/33186865_1963908880320981_5776167367381876736_n.jpg" alt="">
+    <ol id="licoes_aprendidas">Lições Aprendidas
+     <li>Unix</li>
+     <li>Git</li>
+     <li>GitHub</li>
+     <li>HTML</li>
+     <li>CSS</li>
+     <li>JavaScript</li>
+     <li>Semantic HTML</li>
+     <li>Slack</li>
+     <li>Zoom</li>
+     <li>Empatia</li>
+    </ol>
+    <ul>
+        <li>Reatc</li>
+        <li>UnitTests</li>
+        <li>ES6</li>
+        <li>Forms</li>
+        <li>Node</li>
+        <li>HOF</li>
+        <li>DOM</li>
+        <li>SQL</li>
+        <li>CSS Responsive</li>
+        <li>Inspect</li>
+    </ul>
+
 </body>
 </html>
