--- a/index.html
+++ b/index.html
@@ -11,5 +11,48 @@
     <header id="cabecalho">
         <h1 id="titulo"> neithan</h1>
     </header>
+    <main>
+        <section>
+            <img id="minha_foto" src="nathannunes.jpeg" alt="">
+        </section>
+
+        <section>
+            <ol id="licoes_aprendidas">
+                <li>Bash</li>
+                <li>Unix</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Funcionabilidade da Internet</li>
+                <li>Html</li>
+                <li>Css</li>
+                <li>HTML Sêmantico</li>
+                <li>Pseudoclasses</li>
+                <li>Box Model</li>
+            </ol>
+        </section>
+
+        <section>
+            <ul id="licoes_a_aprender">
+                <li>Array</li>
+                <li>Loop</li>
+                <li>Objetos</li>
+                <li>Funções</li>
+                <li>DOM</li>
+                <li>Web Storage</li>
+                <li>React</li>
+                <li>Jest</li>
+                <li>Backend</li>
+                <li>Introdução a Ciência da Computação</li>
+            </ul>
+        </section>
+    </main>
+    <footer id="rodape">
+        <section>
+            <ul><h3>Contatos:</h3>
+                <li><a class="linksThemes" href="https://www.linkedin.com/in/nathannunes-/" target="_blank">Linkedin</a></li>
+                <li><a class="linksThemes" href="https://github.com/NunesNathan" target="_blank">GitHub</a></li>
+            </ul>
+        </section>
+    </footer>
 </body>
 </html>
